# cmake_demo

./: CMakeLists.txt  Main.cpp  Main.h
common/: CMakeLists.txt  OpencvConverter.h
include/: Common.h  GlobalTimer.h  Main.h  OpencvConverter.h
map/: CMakeLists.txt
mode/: Common.h
mode/map/: MapStateEnum.cpp  MapStateEnum.h
mode/time/: GlobalTimer.cpp
roleSite/: CMakeLists.txt  RoleSiteCalculation.cpp  RoleSiteCalculation.h
src/: Main.cpp
src/mode/map/: MapStateEnum.cpp
src/mode/time/: GlobalTimer.cpp
src/util/: OpencvConverter.cpp
time/: CMakeLists.txt  GlobalTimer.h
util/: OpencvConverter.cpp
yolov8/: CMakeLists.txt  inference.h  yoloV8Analysis.cpp  yoloV8Analysis.h
